@@ -1,3 +1,9 @@
+2002-07-08  Deepa Natarajan  <deepa.natarajan@wipro.com> 
+ 
+	* logview.[ch], log_repaint.c: Append filename to the window 
+	title. Disable Close and Properties option when all files are
+	closed. s/Log/File as logs are just files. 
+
 2002-07-05  Glynn Foster  <glynn.foster@sun.com>
 
 	* gnome-system-log.desktop.in: s/DocPath/X-GNOME-DocPath.
